--- a/style.css
+++ b/style.css
@@ -6,6 +6,11 @@
   box-sizing: border-box;
   font-family: 'Poppins', sans-serif;
 }
+h2{
+  display:flex;
+  align-items:center;
+  color:"white";
+}
 body{
   display: flex;
   align-items: center;
